syntax = "proto3";

option csharp_namespace = "NotificationRPCClient";

package notification;

service Notification {
  rpc SendNotification (NotificationItem) returns (NotificationReply);
}

message NotificationItem {
  string emailaddress = 1;
  string message = 2;
}

message NotificationReply {
  string processingTime = 1;
}
